src/objects/Integration_Error_Handling_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <picklist>
            <picklistValues>
                <fullName>Xero</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickBooks Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_GET_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required GET call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retry_After_sec__c</fullName>
        <label>Retry After (sec)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Error Handling Config</label>
    <pluralLabel>Integration Error Handling Configs</pluralLabel>
</CustomObject>